--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<description>Maven Web Project for Java Project</description>
 
 	<organization>
-		<name>KK Funda Devops Institution </name>
+		<name>KK Funda Devops </name>
 		<url>http://kkfunda.com</url>
 	</organization>
 
